<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayoutbuzzer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/daybuzzer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzer1" />

    <ImageView
        android:id="@+id/dayzero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:src="@drawable/emi_day0" />

    <TextView
        android:id="@+id/daybuzzer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzer2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/startbuzzer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startbuzzer" />

        <Button
            android:id="@+id/endbuzzer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endbuzzer" />
        
            <TextView
        android:id="@+id/onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onOff"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        

    </LinearLayout>

    <Button
        android:id="@+id/returnButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returnButton" />

</LinearLayout>