<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
            
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_descr"
            android:textAppearance="?android:attr/textAppearance" />
    
     <LinearLayout
        android:id="@+id/laytbtns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         >
            
        <Button
             android:id="@+id/returnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/returnButton" />
    </LinearLayout>

</LinearLayout>